Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/manual/_incoming/2274-vm-import/index.html
+++ b/manual/_incoming/2274-vm-import/index.html
@@ -2036,34 +2036,48 @@ vcsim   clusterReady
 </li>
 <li>
 <p>Create some images
-<img src="/docs/static/images/addons/2274-openstack-create-image.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-create-image.png" alt="images/addons/2274-openstack-create-image.png"></p>
 </li>
 <li>
 <p>Create key pairs</p>
 </li>
 <li>
 <p>Create an empty volume to ensure the microstack.cinder services works well (if failed, check the OpenStack troubleshooting section)
-<img src="/docs/static/images/addons/2274-openstack-empty-volume.png" alt="image">
-<img src="/docs/static/images/addons/2274-openstack-empty-volume-display.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-empty-volume.png" alt="images/addons/2274-openstack-empty-volume.png">
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-empty-volume-display.png" alt="images/addons/2274-openstack-empty-volume-display.png"></p>
 </li>
 <li>
 <p>Launch a vm instance, ensure the vm can be created without error message
-<img src="/docs/static/images/addons/2274-openstack-create-vm.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-create-vm.png" alt="images/addons/2274-openstack-create-vm.png"></p>
 </li>
 <li>
 <p>Enable the vm-import-controller addon on Harvester
-<img src="/docs/static/images/addons/2274-enable-vm-importer.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-enable-vm-importer.png" alt="images/addons/2274-enable-vm-importer.png"></p>
 </li>
 <li>
 <p>Open Compute -&gt; System -&gt; System Information page, find the <code>Services</code> tab</p>
 </li>
 <li>
 <p>Check the <code>Region</code> in the page (eg. <code>microstack</code>)
-<img src="/docs/static/images/addons/2274-openstack-region.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-region.png" alt="images/addons/2274-openstack-region.png"></p>
 </li>
 <li>
 <p>Check the endpoint of the identity item
-<img src="/docs/static/images/addons/2274-openstack-endpoint.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-openstack-endpoint.png" alt="images/addons/2274-openstack-endpoint.png"></p>
 </li>
 <li>
 <p>Access the Harvester node machine</p>
@@ -2177,11 +2191,15 @@ spec:
 </code></pre></li>
 <li>
 <p>After the <code>VirtualMachineImport</code> created, you can find Harvester create a new image from the OpenStack
-<img src="/docs/static/images/addons/2274-harvester-import-openstack-image.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-harvester-import-openstack-image.png" alt="images/addons/2274-harvester-import-openstack-image.png"></p>
 </li>
 <li>
 <p>The OpenStack vm would be imported to Harvester
-<img src="/docs/static/images/addons/2274-harvester-import-openstack-vm.png" alt="image"></p>
+
+
+<img src="https://harvester.github.io/tests/images/addons/2274-harvester-import-openstack-vm.png" alt="images/addons/2274-harvester-import-openstack-vm.png"></p>
 </li>
 </ol>
 <p>The controller will check that the source is ready, before the virtualmachine import is initiated.</p>
