Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/integrations/test_3_vm_functions.html
+++ b/backend/integrations/test_3_vm_functions.html
@@ -600,7 +600,7 @@ class TestVMOperations:
         while endtime &gt; datetime.now():
             l_check = dict()
             for vol_name, (code, data) in check.items():
-                if 200 != code:
+                if code not in (200, 204):
                     fails.append((vol_name, f&#34;Failed to delete\nStatus({code}): {data}&#34;))
                 else:
                     code, data = api_client.volumes.get(vol_name)
@@ -1656,7 +1656,7 @@ def test_create_vm_no_available_resources(resource, api_client, image,
     while endtime &gt; datetime.now():
         l_check = dict()
         for vol_name, (code, data) in check.items():
-            if 200 != code:
+            if code not in (200, 204):
                 fails.append(
                     (vol_name, f&#34;Failed to delete\nStatus({code}): {data}&#34;))
             else:
@@ -2524,7 +2524,7 @@ def test_create_vm_no_available_resources(resource, api_client, image,
     while endtime &gt; datetime.now():
         l_check = dict()
         for vol_name, (code, data) in check.items():
-            if 200 != code:
+            if code not in (200, 204):
                 fails.append(
                     (vol_name, f&#34;Failed to delete\nStatus({code}): {data}&#34;))
             else:
@@ -4522,7 +4522,7 @@ class TestVMOperations:
         while endtime &gt; datetime.now():
             l_check = dict()
             for vol_name, (code, data) in check.items():
-                if 200 != code:
+                if code not in (200, 204):
                     fails.append((vol_name, f&#34;Failed to delete\nStatus({code}): {data}&#34;))
                 else:
                     code, data = api_client.volumes.get(vol_name)
@@ -4677,7 +4677,7 @@ Exepected Result:<ul>
     while endtime &gt; datetime.now():
         l_check = dict()
         for vol_name, (code, data) in check.items():
-            if 200 != code:
+            if code not in (200, 204):
                 fails.append((vol_name, f&#34;Failed to delete\nStatus({code}): {data}&#34;))
             else:
                 code, data = api_client.volumes.get(vol_name)
