--- a/backend/integrations/test_1_volumes.html
+++ b/backend/integrations/test_1_volumes.html
@@ -220,7 +220,7 @@ class TestVolumeWithVM:
         self.delete_vm(api_client, ubuntu_vm, polling_for)
 
         code, data = api_client.volumes.delete(vol_name)
-        assert 200 == code, f&#34;Fail to delete volume\n{code}, {data}&#34;
+        assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
 
         # Check Volume
         code, data = api_client.volumes.get(vol_name)
@@ -470,7 +470,7 @@ class TestVolumeWithVM:
         self.delete_vm(api_client, ubuntu_vm, polling_for)
 
         code, data = api_client.volumes.delete(vol_name)
-        assert 200 == code, f&#34;Fail to delete volume\n{code}, {data}&#34;
+        assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
 
         # Check Volume
         code, data = api_client.volumes.get(vol_name)
@@ -581,7 +581,7 @@ Ref. <a href="https://github.com/harvester/tests/issues/652">https://github.com/
     self.delete_vm(api_client, ubuntu_vm, polling_for)
 
     code, data = api_client.volumes.delete(vol_name)
-    assert 200 == code, f&#34;Fail to delete volume\n{code}, {data}&#34;
+    assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
 
     # Check Volume
     code, data = api_client.volumes.get(vol_name)
