Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/integrations/test_upgrade.html
+++ b/backend/integrations/test_upgrade.html
@@ -29,7 +29,6 @@
 <pre><code class="python">import re
 import json
 import yaml
-import socket
 from time import sleep
 from operator import add
 from functools import reduce
@@ -267,22 +266,6 @@ def interceptor(api_client):
         def check(self, data):
             for func in self.intercepts():
                 func(data)
-
-        def intercept_v121_vm(self, data):
-            if &#34;v1.2.1&#34; != api_client.cluster_version.raw:
-                return
-            if self._v121_vm:
-                code, data = api_client.vms.get()
-                for vm in data.get(&#39;data&#39;, []):
-                    api_client.vms.stop(vm[&#39;metadata&#39;][&#39;name&#39;])
-                self._v121_vm = False
-            else:
-                conds = dict((c[&#39;type&#39;], c) for c in data.get(&#39;status&#39;, {}).get(&#39;conditions&#39;, []))
-                st = data.get(&#39;metadata&#39;, {}).get(&#39;labels&#39;, {}).get(&#39;harvesterhci.io/upgradeState&#39;)
-                if &#34;Succeeded&#34; == st and &#34;True&#34; == conds.get(&#39;Completed&#39;, {}).get(&#39;status&#39;):
-                    code, data = api_client.vms.get()
-                    for vm in data.get(&#39;data&#39;, []):
-                        api_client.vms.start(vm[&#39;metadata&#39;][&#39;name&#39;])
 
     return Interceptor()
 
@@ -640,7 +623,7 @@ class TestAnyNodesUpgrade:
                     )
                     assert not err, (vm1_md5, err)
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Timed out while writing data into VM&#34;)
@@ -663,6 +646,17 @@ class TestAnyNodesUpgrade:
         spec = api_client.backups.RestoreSpec.for_new(restored_vm_name)
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, (code, data)
+        # Check restore VM is created
+        endtime = datetime.now() + timedelta(seconds=wait_timeout)
+        while endtime &gt; datetime.now():
+            code, data = api_client.vms.get(restored_vm_name)
+            if 200 == code:
+                break
+            sleep(3)
+        else:
+            raise AssertionError(
+                f&#34;restored VM {restored_vm_name} is not created&#34;
+            )
         vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
@@ -688,7 +682,7 @@ class TestAnyNodesUpgrade:
                     )
                     assert &#34;success&#34; == out and not err
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -799,7 +793,7 @@ class TestAnyNodesUpgrade:
                             continue
                         if not err and cmp[ip] &lt; timestamp:
                             done.add(ip)
-                except (SSHException, NoValidConnectionsError, socket.timeout):
+                except (SSHException, NoValidConnectionsError, TimeoutError):
                     continue
 
             if not done.symmetric_difference(node_ips):
@@ -879,7 +873,7 @@ class TestAnyNodesUpgrade:
                         assert not err, (md5, err)
                         assert md5 == cluster_state.vms[&#39;md5&#39;]
                         break
-                except (SSHException, NoValidConnectionsError):
+                except (SSHException, NoValidConnectionsError, TimeoutError):
                     sleep(5)
             else:
                 fails.append(f&#34;Data in VM({name}, {vm_ip}) is inconsistent.&#34;)
@@ -935,7 +929,7 @@ class TestAnyNodesUpgrade:
                     assert not err, (md5, err)
                     assert md5 == cluster_state.vms[&#39;md5&#39;]
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -1464,22 +1458,6 @@ def interceptor(api_client):
             for func in self.intercepts():
                 func(data)
 
-        def intercept_v121_vm(self, data):
-            if &#34;v1.2.1&#34; != api_client.cluster_version.raw:
-                return
-            if self._v121_vm:
-                code, data = api_client.vms.get()
-                for vm in data.get(&#39;data&#39;, []):
-                    api_client.vms.stop(vm[&#39;metadata&#39;][&#39;name&#39;])
-                self._v121_vm = False
-            else:
-                conds = dict((c[&#39;type&#39;], c) for c in data.get(&#39;status&#39;, {}).get(&#39;conditions&#39;, []))
-                st = data.get(&#39;metadata&#39;, {}).get(&#39;labels&#39;, {}).get(&#39;harvesterhci.io/upgradeState&#39;)
-                if &#34;Succeeded&#34; == st and &#34;True&#34; == conds.get(&#39;Completed&#39;, {}).get(&#39;status&#39;):
-                    code, data = api_client.vms.get()
-                    for vm in data.get(&#39;data&#39;, []):
-                        api_client.vms.start(vm[&#39;metadata&#39;][&#39;name&#39;])
-
     return Interceptor()</code></pre>
 </details>
 </dd>
@@ -1678,7 +1656,7 @@ class TestAnyNodesUpgrade:
                     )
                     assert not err, (vm1_md5, err)
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Timed out while writing data into VM&#34;)
@@ -1701,6 +1679,17 @@ class TestAnyNodesUpgrade:
         spec = api_client.backups.RestoreSpec.for_new(restored_vm_name)
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, (code, data)
+        # Check restore VM is created
+        endtime = datetime.now() + timedelta(seconds=wait_timeout)
+        while endtime &gt; datetime.now():
+            code, data = api_client.vms.get(restored_vm_name)
+            if 200 == code:
+                break
+            sleep(3)
+        else:
+            raise AssertionError(
+                f&#34;restored VM {restored_vm_name} is not created&#34;
+            )
         vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
@@ -1726,7 +1715,7 @@ class TestAnyNodesUpgrade:
                     )
                     assert &#34;success&#34; == out and not err
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -1837,7 +1826,7 @@ class TestAnyNodesUpgrade:
                             continue
                         if not err and cmp[ip] &lt; timestamp:
                             done.add(ip)
-                except (SSHException, NoValidConnectionsError, socket.timeout):
+                except (SSHException, NoValidConnectionsError, TimeoutError):
                     continue
 
             if not done.symmetric_difference(node_ips):
@@ -1917,7 +1906,7 @@ class TestAnyNodesUpgrade:
                         assert not err, (md5, err)
                         assert md5 == cluster_state.vms[&#39;md5&#39;]
                         break
-                except (SSHException, NoValidConnectionsError):
+                except (SSHException, NoValidConnectionsError, TimeoutError):
                     sleep(5)
             else:
                 fails.append(f&#34;Data in VM({name}, {vm_ip}) is inconsistent.&#34;)
@@ -1973,7 +1962,7 @@ class TestAnyNodesUpgrade:
                     assert not err, (md5, err)
                     assert md5 == cluster_state.vms[&#39;md5&#39;]
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -2337,7 +2326,7 @@ def test_preq_setup_vms(
                 )
                 assert not err, (vm1_md5, err)
                 break
-        except (SSHException, NoValidConnectionsError):
+        except (SSHException, NoValidConnectionsError, TimeoutError):
             sleep(5)
     else:
         raise AssertionError(&#34;Timed out while writing data into VM&#34;)
@@ -2360,6 +2349,17 @@ def test_preq_setup_vms(
     spec = api_client.backups.RestoreSpec.for_new(restored_vm_name)
     code, data = api_client.backups.restore(unique_vm_name, spec)
     assert 201 == code, (code, data)
+    # Check restore VM is created
+    endtime = datetime.now() + timedelta(seconds=wait_timeout)
+    while endtime &gt; datetime.now():
+        code, data = api_client.vms.get(restored_vm_name)
+        if 200 == code:
+            break
+        sleep(3)
+    else:
+        raise AssertionError(
+            f&#34;restored VM {restored_vm_name} is not created&#34;
+        )
     vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
     assert vm_got_ips, (
         f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
@@ -2385,7 +2385,7 @@ def test_preq_setup_vms(
                 )
                 assert &#34;success&#34; == out and not err
                 break
-        except (SSHException, NoValidConnectionsError):
+        except (SSHException, NoValidConnectionsError, TimeoutError):
             sleep(5)
     else:
         raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -2510,7 +2510,7 @@ def test_verify_audit_log(self, api_client, host_shell, wait_timeout):
                         continue
                     if not err and cmp[ip] &lt; timestamp:
                         done.add(ip)
-            except (SSHException, NoValidConnectionsError, socket.timeout):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 continue
 
         if not done.symmetric_difference(node_ips):
@@ -2773,7 +2773,7 @@ def test_verify_restore_vm(
                 assert not err, (md5, err)
                 assert md5 == cluster_state.vms[&#39;md5&#39;]
                 break
-        except (SSHException, NoValidConnectionsError):
+        except (SSHException, NoValidConnectionsError, TimeoutError):
             sleep(5)
     else:
         raise AssertionError(&#34;Unable to login to restored VM to check data consistency&#34;)
@@ -2916,7 +2916,7 @@ def test_verify_vms(self, api_client, cluster_state, vm_shell, vm_checker, wait_
                     assert not err, (md5, err)
                     assert md5 == cluster_state.vms[&#39;md5&#39;]
                     break
-            except (SSHException, NoValidConnectionsError):
+            except (SSHException, NoValidConnectionsError, TimeoutError):
                 sleep(5)
         else:
             fails.append(f&#34;Data in VM({name}, {vm_ip}) is inconsistent.&#34;)
