--- a/backend/integrations/test_1_volumes.html
+++ b/backend/integrations/test_1_volumes.html
@@ -206,35 +206,29 @@ class TestVolumeWithVM:
     def test_delete_volume_on_deleted_vm(self, api_client, ubuntu_image, ubuntu_vm, polling_for):
         &#34;&#34;&#34;
         1. Create a VM with volume
-        2. Delete volume should reply 422
-        3. Delete VM but not volume
-        4. Delete volume should reply 200
+        2. Delete VM but not volume
+        3. Delete volume concurrently with VM
+        4. VM should be deleted
+        5. Volume should be deleted
         Ref. https://github.com/harvester/tests/issues/652
         &#34;&#34;&#34;
+        vm_name = ubuntu_vm[&#39;metadata&#39;][&#39;name&#39;]
         vol_name = (ubuntu_vm[&#34;spec&#34;][&#34;template&#34;][&#34;spec&#34;][&#34;volumes&#34;][0]
                              [&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;])
 
-        code, data = api_client.volumes.delete(vol_name)
-        assert 422 == code, f&#34;Should fail to delete volume\n{code}, {data}&#34;
+        api_client.vms.delete(vm_name)
 
-        self.delete_vm(api_client, ubuntu_vm, polling_for)
+        polling_for(&#34;Delete volume&#34;,
+                    lambda c, d: 200 == c,
+                    api_client.volumes.delete, vol_name)
 
-        code, data = api_client.volumes.delete(vol_name)
-        assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
-
-        # Check Volume
-        code, data = api_client.volumes.get(vol_name)
-        mdata, annotations = data[&#39;metadata&#39;], data[&#39;metadata&#39;][&#39;annotations&#39;]
-        assert 200 == code, (code, data)
-        assert mdata[&#39;name&#39;] == vol_name, (code, data)
-        # status
-        assert not mdata[&#39;state&#39;][&#39;error&#39;], (code, data)
-        assert not mdata[&#39;state&#39;][&#39;transitioning&#39;], (code, data)
-        assert data[&#39;status&#39;][&#39;phase&#39;] == &#34;Bound&#34;, (code, data)
-        # source
-        assert ubuntu_image[&#34;id&#34;] == annotations[&#39;harvesterhci.io/imageId&#39;], (code, data)
-        # attachment
-        assert not annotations.get(&#34;harvesterhci.io/owned-by&#34;), (code, data)</code></pre>
+        # Retry since VM is deleting
+        polling_for(&#34;VM do deleted&#34;,
+                    lambda c, d: 404 == c,
+                    api_client.vms.get, vm_name)
+        polling_for(&#34;Volume do deleted&#34;,
+                    lambda c, d: 404 == c,
+                    api_client.volumes.get, vol_name)</code></pre>
 </details>
 </section>
 <section>
@@ -456,35 +450,29 @@ class TestVolumeWithVM:
     def test_delete_volume_on_deleted_vm(self, api_client, ubuntu_image, ubuntu_vm, polling_for):
         &#34;&#34;&#34;
         1. Create a VM with volume
-        2. Delete volume should reply 422
-        3. Delete VM but not volume
-        4. Delete volume should reply 200
+        2. Delete VM but not volume
+        3. Delete volume concurrently with VM
+        4. VM should be deleted
+        5. Volume should be deleted
         Ref. https://github.com/harvester/tests/issues/652
         &#34;&#34;&#34;
+        vm_name = ubuntu_vm[&#39;metadata&#39;][&#39;name&#39;]
         vol_name = (ubuntu_vm[&#34;spec&#34;][&#34;template&#34;][&#34;spec&#34;][&#34;volumes&#34;][0]
                              [&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;])
 
-        code, data = api_client.volumes.delete(vol_name)
-        assert 422 == code, f&#34;Should fail to delete volume\n{code}, {data}&#34;
+        api_client.vms.delete(vm_name)
 
-        self.delete_vm(api_client, ubuntu_vm, polling_for)
+        polling_for(&#34;Delete volume&#34;,
+                    lambda c, d: 200 == c,
+                    api_client.volumes.delete, vol_name)
 
-        code, data = api_client.volumes.delete(vol_name)
-        assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
-
-        # Check Volume
-        code, data = api_client.volumes.get(vol_name)
-        mdata, annotations = data[&#39;metadata&#39;], data[&#39;metadata&#39;][&#39;annotations&#39;]
-        assert 200 == code, (code, data)
-        assert mdata[&#39;name&#39;] == vol_name, (code, data)
-        # status
-        assert not mdata[&#39;state&#39;][&#39;error&#39;], (code, data)
-        assert not mdata[&#39;state&#39;][&#39;transitioning&#39;], (code, data)
-        assert data[&#39;status&#39;][&#39;phase&#39;] == &#34;Bound&#34;, (code, data)
-        # source
-        assert ubuntu_image[&#34;id&#34;] == annotations[&#39;harvesterhci.io/imageId&#39;], (code, data)
-        # attachment
-        assert not annotations.get(&#34;harvesterhci.io/owned-by&#34;), (code, data)</code></pre>
+        # Retry since VM is deleting
+        polling_for(&#34;VM do deleted&#34;,
+                    lambda c, d: 404 == c,
+                    api_client.vms.get, vm_name)
+        polling_for(&#34;Volume do deleted&#34;,
+                    lambda c, d: 404 == c,
+                    api_client.volumes.get, vol_name)</code></pre>
 </details>
 <h3>Class variables</h3>
 <dl>
@@ -555,9 +543,10 @@ class TestVolumeWithVM:
 <dd>
 <div class="desc"><ol>
 <li>Create a VM with volume</li>
-<li>Delete volume should reply 422</li>
 <li>Delete VM but not volume</li>
-<li>Delete volume should reply 200
+<li>Delete volume concurrently with VM</li>
+<li>VM should be deleted</li>
+<li>Volume should be deleted
 Ref. <a href="https://github.com/harvester/tests/issues/652">https://github.com/harvester/tests/issues/652</a></li>
 </ol></div>
 <details class="source">
@@ -567,35 +556,29 @@ Ref. <a href="https://github.com/harvester/tests/issues/652">https://github.com/
 <pre><code class="python">def test_delete_volume_on_deleted_vm(self, api_client, ubuntu_image, ubuntu_vm, polling_for):
     &#34;&#34;&#34;
     1. Create a VM with volume
-    2. Delete volume should reply 422
-    3. Delete VM but not volume
-    4. Delete volume should reply 200
+    2. Delete VM but not volume
+    3. Delete volume concurrently with VM
+    4. VM should be deleted
+    5. Volume should be deleted
     Ref. https://github.com/harvester/tests/issues/652
     &#34;&#34;&#34;
+    vm_name = ubuntu_vm[&#39;metadata&#39;][&#39;name&#39;]
     vol_name = (ubuntu_vm[&#34;spec&#34;][&#34;template&#34;][&#34;spec&#34;][&#34;volumes&#34;][0]
                          [&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;])
 
-    code, data = api_client.volumes.delete(vol_name)
-    assert 422 == code, f&#34;Should fail to delete volume\n{code}, {data}&#34;
+    api_client.vms.delete(vm_name)
 
-    self.delete_vm(api_client, ubuntu_vm, polling_for)
+    polling_for(&#34;Delete volume&#34;,
+                lambda c, d: 200 == c,
+                api_client.volumes.delete, vol_name)
 
-    code, data = api_client.volumes.delete(vol_name)
-    assert code in (200, 204), f&#34;Fail to delete volume\n{code}, {data}&#34;
-
-    # Check Volume
-    code, data = api_client.volumes.get(vol_name)
-    mdata, annotations = data[&#39;metadata&#39;], data[&#39;metadata&#39;][&#39;annotations&#39;]
-    assert 200 == code, (code, data)
-    assert mdata[&#39;name&#39;] == vol_name, (code, data)
-    # status
-    assert not mdata[&#39;state&#39;][&#39;error&#39;], (code, data)
-    assert not mdata[&#39;state&#39;][&#39;transitioning&#39;], (code, data)
-    assert data[&#39;status&#39;][&#39;phase&#39;] == &#34;Bound&#34;, (code, data)
-    # source
-    assert ubuntu_image[&#34;id&#34;] == annotations[&#39;harvesterhci.io/imageId&#39;], (code, data)
-    # attachment
-    assert not annotations.get(&#34;harvesterhci.io/owned-by&#34;), (code, data)</code></pre>
+    # Retry since VM is deleting
+    polling_for(&#34;VM do deleted&#34;,
+                lambda c, d: 404 == c,
+                api_client.vms.get, vm_name)
+    polling_for(&#34;Volume do deleted&#34;,
+                lambda c, d: 404 == c,
+                api_client.volumes.get, vol_name)</code></pre>
 </details>
 </dd>
 <dt id="harvester_e2e_tests.integrations.test_1_volumes.TestVolumeWithVM.test_delete_volume_on_existing_vm"><code class="name flex">
