--- a/backend/fixtures/virtualmachines.html
+++ b/backend/fixtures/virtualmachines.html
@@ -308,6 +308,19 @@ def vm_checker(api_client, wait_timeout, sleep_timeout, vm_shell):
                 )
             return self.wait_agent_connected(vm_name, endtime, cb, **kws)
 
+        def wait_ip_addresses(self, vm_name, ifnames, endtime=None, callback=default_cb, **kws):
+            def cb(ctx):
+                if ctx.callee == &#39;vm.start&#39;:
+                    return callback(ctx)
+                ifaces = {d[&#39;name&#39;]: d for d in ctx.data.get(&#39;status&#39;, {}).get(&#39;interfaces&#39;, {})}
+                return (
+                    all(ifaces.get(name, {}).get(&#39;ipAddress&#39;) for name in ifnames)
+                    and callback(ctx)
+                )
+
+            ifnames = list(ifnames)
+            return self.wait_interfaces(vm_name, endtime, cb, **kws)
+
         def wait_cloudinit_done(self, shell, endtime=None, callback=default_cb, **kws):
             cmd = &#39;cloud-init status&#39;
             endtime = endtime or self._endtime()
@@ -746,6 +759,19 @@ def vm_checker(api_client, wait_timeout, sleep_timeout, vm_shell):
                     and callback(ctx)
                 )
             return self.wait_agent_connected(vm_name, endtime, cb, **kws)
+
+        def wait_ip_addresses(self, vm_name, ifnames, endtime=None, callback=default_cb, **kws):
+            def cb(ctx):
+                if ctx.callee == &#39;vm.start&#39;:
+                    return callback(ctx)
+                ifaces = {d[&#39;name&#39;]: d for d in ctx.data.get(&#39;status&#39;, {}).get(&#39;interfaces&#39;, {})}
+                return (
+                    all(ifaces.get(name, {}).get(&#39;ipAddress&#39;) for name in ifnames)
+                    and callback(ctx)
+                )
+
+            ifnames = list(ifnames)
+            return self.wait_interfaces(vm_name, endtime, cb, **kws)
 
         def wait_cloudinit_done(self, shell, endtime=None, callback=default_cb, **kws):
             cmd = &#39;cloud-init status&#39;
