--- a/backend/integrations/test_upgrade.html
+++ b/backend/integrations/test_upgrade.html
@@ -609,7 +609,7 @@ class TestAnyNodesUpgrade:
 
         code, data = api_client.vms.create(unique_vm_name, vm_spec)
         assert 201 == code, (code, data)
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(unique_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({unique_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -667,7 +667,7 @@ class TestAnyNodesUpgrade:
             raise AssertionError(
                 f&#34;restored VM {restored_vm_name} is not created&#34;
             )
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -701,7 +701,7 @@ class TestAnyNodesUpgrade:
         vm_spec.add_volume(&#34;vol-1&#34;, 5, storage_cls=new_sc[&#39;metadata&#39;][&#39;name&#39;])
         code, data = api_client.vms.create(f&#34;sc-{unique_vm_name}&#34;, vm_spec)
         assert 201 == code, (code, data)
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(f&#34;sc-{unique_vm_name}&#34;)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(f&#34;sc-{unique_vm_name}&#34;, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM(sc-{unique_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -927,7 +927,7 @@ class TestAnyNodesUpgrade:
             raise AssertionError(
                 f&#34;restored VM {restored_vm_name} is not created&#34;
             )
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -1658,7 +1658,7 @@ class TestAnyNodesUpgrade:
 
         code, data = api_client.vms.create(unique_vm_name, vm_spec)
         assert 201 == code, (code, data)
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(unique_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({unique_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -1716,7 +1716,7 @@ class TestAnyNodesUpgrade:
             raise AssertionError(
                 f&#34;restored VM {restored_vm_name} is not created&#34;
             )
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -1750,7 +1750,7 @@ class TestAnyNodesUpgrade:
         vm_spec.add_volume(&#34;vol-1&#34;, 5, storage_cls=new_sc[&#39;metadata&#39;][&#39;name&#39;])
         code, data = api_client.vms.create(f&#34;sc-{unique_vm_name}&#34;, vm_spec)
         assert 201 == code, (code, data)
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(f&#34;sc-{unique_vm_name}&#34;)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(f&#34;sc-{unique_vm_name}&#34;, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM(sc-{unique_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -1976,7 +1976,7 @@ class TestAnyNodesUpgrade:
             raise AssertionError(
                 f&#34;restored VM {restored_vm_name} is not created&#34;
             )
-        vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+        vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
         assert vm_got_ips, (
             f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
             f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -2339,7 +2339,7 @@ def test_preq_setup_vms(
 
     code, data = api_client.vms.create(unique_vm_name, vm_spec)
     assert 201 == code, (code, data)
-    vm_got_ips, (code, data) = vm_checker.wait_interfaces(unique_vm_name)
+    vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#34;nic-1&#34;])
     assert vm_got_ips, (
         f&#34;Failed to Start VM({unique_vm_name}) with errors:\n&#34;
         f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -2397,7 +2397,7 @@ def test_preq_setup_vms(
         raise AssertionError(
             f&#34;restored VM {restored_vm_name} is not created&#34;
         )
-    vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+    vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
     assert vm_got_ips, (
         f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
         f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -2431,7 +2431,7 @@ def test_preq_setup_vms(
     vm_spec.add_volume(&#34;vol-1&#34;, 5, storage_cls=new_sc[&#39;metadata&#39;][&#39;name&#39;])
     code, data = api_client.vms.create(f&#34;sc-{unique_vm_name}&#34;, vm_spec)
     assert 201 == code, (code, data)
-    vm_got_ips, (code, data) = vm_checker.wait_interfaces(f&#34;sc-{unique_vm_name}&#34;)
+    vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(f&#34;sc-{unique_vm_name}&#34;, [&#34;nic-1&#34;])
     assert vm_got_ips, (
         f&#34;Failed to Start VM(sc-{unique_vm_name}) with errors:\n&#34;
         f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
@@ -2798,7 +2798,7 @@ def test_verify_restore_vm(
         raise AssertionError(
             f&#34;restored VM {restored_vm_name} is not created&#34;
         )
-    vm_got_ips, (code, data) = vm_checker.wait_interfaces(restored_vm_name)
+    vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#34;nic-1&#34;])
     assert vm_got_ips, (
         f&#34;Failed to Start VM({restored_vm_name}) with errors:\n&#34;
         f&#34;Status: {data.get(&#39;status&#39;)}\n&#34;
